Tested and passed javascript strict mode. No longer injected button with javascript, used visibility selectors instead, and finally cached hasClass values in a variable

--- a/app/assets/stylesheets/game_of_life_matrix.css
+++ b/app/assets/stylesheets/game_of_life_matrix.css
@@ -18,3 +18,7 @@
 .on {
 	background: #B4DA55;
 }
+
+.start-life {
+	display: none;
+}
